theme/standard/styles_layout.css
/* ... */
.programprogress .startdate img{
	margin-top:0px !important;
}
#course-category .viewtypepicker li {
   display: inline;
    margin: 0 -4px 0 0;
    padding: 0;
}
#course-category .viewtypepicker ul{
    font-size: 84%;
    line-height: 1.8em;
    list-style: none outside none;
    margin: 10px 0 0;
    padding: 0 0 1.75em;
    text-align: center;
    width: 100%;
    border-bottom: 1px solid;
    margin-bottom: 20px;
    padding-bottom: 0;
}
#course-category .viewtypepicker li a span, #course-category .viewtypepicker li span {
   	background: url("pix/tab/right.gif") no-repeat scroll right top transparent;
    padding: 10px 14px 0.35em 0;
}
#course-category .viewtypepicker li a, #course-category .viewtypepicker li.selected{
   	background: url("pix/tab/left.gif") no-repeat scroll left top transparent;
	margin: 0 -1px 0 0;
	padding: 10px 0 5px 13px;
}
#course-category .viewtypepicker li.selected{
    padding: 10px 0 3px 13px;
}
#course-category .viewtypepicker .selected span{
	padding-bottom:3px;
}


/*****************************************************************************/
/** Program  **/
/*****************************************************************************/

.programprogress{
    height: 30px;
    width: 640px;
    margin-bottom:30px;
}
#dp-plan-content fieldset legend{
	margin-left:10px;
	padding: 0px 6px;
}

#dp-plan-content .nextsetoperator .operator-or, #dp-plan-content .nextsetoperator .operator-then{
	margin:10px 0px;
	float:left;
	padding-right:75px;
	margin-right:10px;
}
#dp-plan-content .nextsetoperator .nextsethelp {
	float:left;
	width: 68%;
}
#dp-plan-content .nextsetoperator {
	width:100%;
	height:70px;
	margin-top:15px;
}
#dp-plan-content fieldset table .lastcol{
	width:95px;
}
#dp-plan-content fieldset table .c1{
	width:80px;
	text-align: center;
}
#dp-plan-content fieldset table .program-launch-course-button{
	padding-top:5px;
}
#local-plan-components-program-view #dp-plan-content fieldset,
#local-program-view #dp-plan-content fieldset{
	padding: 5px 25px 20px 25px;
}
.completion-notyetstarted{
    margin-top: 10px;
}
div.totara-dialog .selected span.unremovable span.deletebutton {
    cursor: default;
}

/* Spacing for checkbox on the Email notifiations page  */
div span.emailnotifycheckbox {
    padding-right:10px;
}

/* Layout Styling for hierarchy */
div.list-assignedcompetencies table#list-assignedcompetencies {
    width:95%;
}

div.list-assignedcompetencies table#list-assignedcompetencies td.c2 {
    width:3%;
    text-align: center;
}

/* Bulk type changes */

/* improve spacing between existing and new type headings */
h3.hierarchy-bulk-type {
    align: left;
    padding-top: 10px;
}

/* improve table contents alignment */
table.hierarchy-bulk-type-table td {
    vertical-align: middle;
}

/* allow a bit more room for title in form */
form.hierarchy-bulk-type-form div.fitemtitle {
    width: 35%;
}
form.hierarchy-bulk-type-form div.felement {
    width: 55%;
}

/* bulk actions picker on hierarchy index page */
div.hierarchy-bulk-actions-picker {
    float: right;
    padding-left: 10px
}

/* bulk actions warning notices */
div.hierarchy-bulk-move-warning, div.hierarchy-bulk-delete-warning {
    margin: 10px;
    padding: 5px;
}

#hierarchy-index div.back-link {
    margin-bottom: 10px;
}

/*
 * styling for bulk actions form
 */
table#hierarchy-bulk-actions-form {
    border: 0px;
    margin-top: 5px;
}

table#hierarchy-bulk-actions-form th.available-column,
table#hierarchy-bulk-actions-form td.available-column {
    width: 45%;
    vertical-align: middle;
    text-align: center;
}

table#hierarchy-bulk-actions-form th.selected-column,
table#hierarchy-bulk-actions-form td.selected-column {
    width: 45%;
    vertical-align: middle;
    text-align: center;
}

table#hierarchy-bulk-actions-form th.action-column,
table#hierarchy-bulk-actions-form td.action-column {
    width: 10%;
    vertical-align: middle;
    text-align: center;
}

table#hierarchy-bulk-actions-form input.addbutton,
table#hierarchy-bulk-actions-form input.removebutton {
    margin: 10px;
}

table#hierarchy-bulk-actions-form fieldset.hidden {
    padding: 0px;
    margin: 0px;
}

table#hierarchy-bulk-actions-form select.itemslist {
    min-width: 250px;
    width: 100%;
}

table#hierarchy-bulk-actions-form input#id_search {
    width: 145px;
    margin: 5px 0px;
}

#hierarchy-item-bulkactions form.mform {
    width: 100%;
    text-align: center;
}

#hierarchy-item-bulkactions input#id_deletebutton {
    margin: 15px auto;
}

/**
 * Hierarchy styles
 */

table.editcompetency {
    width: 100%;
}

body.hierarchy-framework div.hierarchy-index-buttons .singlebutton{
    float: right;
    margin-top: 0px;
}

body.hierarchy div.showhide-button .singlebutton {
    float: right;
    margin-top: 0px;
    padding-left: 10px;
}

body.hierarchy-type div.add-type-button .singlebutton {
    margin-top: 0px;
    float: right;
}

/*****************************************************************************/
/** Program Overview **/
/*****************************************************************************/
#programstatus img {
    display: block;
    float: left;
    padding-right: 5px;
}

#programstatus p {
}

#exceptionsreport .exceptionslink{
	display:block;
}

#exceptionsreport{
    padding-left:45px;
	float:left;
}

#program_page_links a,
#program_page_links span{
	padding-top:45px;
}

#program_page_links{
	margin-top:125px;
}

#program-add #program_page_links,
#program-exceptions #program_page_links{
	margin-top:75px;
}

#local-program-edit #program_page_links{
	list-style:none;
	padding-left:0px;
}

.local-program #program_page_links li{
	display:inline;
	padding-top:38px;
	margin-right:75px;
}

#local-program-add #programdetails .ftoggler,
#local-program-edit #programdetails .ftoggler,
#local-program-edit #programcontent .ftoggler,
#local-program-edit #programassignments .ftoggler,
#local-program-edit #programmessages .ftoggler{
	padding:4px 43px;
}
/* ... */

